# dermscan

./: .gitignore  LICENSE  Makefile  Pipfile  README.md  check.txt  list_bad.txt  main.py  pyproject.toml
data/: comedogenic_ratings.csv
dermscan/: cli.py  logic.py  main.py  url_parser.py  utils.py
dermscan/cli/: cli.py
dermscan/cli/cmd/: file_commands.py  input_commands.py  llm_commands.py  scan_commands.py
dermscan/cmd/: __init__.py  converter.py
dermscan/models/: __init__.py  ingredient.py  llm.py  match.py  matcher.py  parser.py  scanner.py  scorer.py  scraper.py
dermscan/shared/: __init__.py  utils.py
dermscan/utils/: __init__.py  inputs.py  printers.py  scorer.py
inputs/: filename.txt
resources/: acneclinic.json  acneclinic.txt  detailed.csv  detailed.json  original.json  original.txt
src/: IngredientLookupError.py  compare_new.py  main.py  script.py  url_parser.py  utils.py
src/data/: stuff.csv
tests/: test_main.py  test_url_parser.py
tests/test_data/: olaplex.txt
