[tool.poetry]
name = "ingredient-scanner"
version = "0.1.0"
description = "This tool aims to help identify possibly harmful skincare ingredients."
authors = ["Khanh Tran"]
include = ["data/*.csv"]
packages = [
    { include = "src/", from = "." }
]


[tool.poetry.dependencies]
python = "~3.9"
requests = "*"
beautifulsoup4 = "*"
lxml = "*"
requests-html = "*"
pandas = "^2.1.1"
pyperclip = "^1.8.2"
thefuzz = "^0.20.0"


[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "^23.10.0"
rich = "^13.6.0"
isort = "^5.12.0"
pyinstaller = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
