[tool.poetry]
name = "dermscan"
version = "0.1.0"
description = "This tool aims to help identify possibly harmful skincare ingredients."
authors = ["Khanh Tran"]


[tool.poetry.dependencies]
python = ">=3.12,<3.13"
requests = "*"
beautifulsoup4 = "*"
lxml = "*"
requests-html = "*"
pandas = "^2.1.1"
pyperclip = "^1.8.2"
thefuzz = "^0.20.0"
click = "^8.1.7"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.25.1"


[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "^23.10.0"
rich = "^13.6.0"
isort = "^5.12.0"
pyinstaller = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dermscan = 'dermscan.cli:cli' # package.module:function

[tool.poetry.files]
include = ["resources/*"]
